# Optionslab

./: .gitignore  README.md  app.py  pyproject.toml
examples/: plot_smile.py
src/optionlab/: __init__.py  implied_vol.py  models.py  vol_smile.py
src/optionlab/pricers/: __init__.py  base.py  binomial.py  black_scholes.py  monte_carlo.py
tests/: test_binomial_mc.py  test_black_scholes.py  test_implied_vol.py  test_vol_smile.py
