[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optionlab"
version = "0.1.0"
description = "A from-scratch options pricing library: Black-Scholes, Binomial, Monte Carlo, and implied vol solvers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "yfinance>=0.2",
    "streamlit>=1.35",
    "plotly>=5.20",
]

[project.optional-dependencies]
fast = ["numba>=0.59"]
dev  = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.mypy]
strict = true
